--- a/css/main.css
+++ b/css/main.css
@@ -33,8 +33,8 @@
 
 
 * {
-    -webkit-box-sizing: border-box;
-            box-sizing: border-box;
+            -webkit-box-sizing: border-box;
+                    box-sizing: border-box;
 }
 
 body {
@@ -60,7 +60,7 @@ img {
     display: flex;
     -webkit-box-align: center;
         -ms-flex-align: center;
-            align-items: center;
+            align-items: center;      
 }
 
 .logo-link {
@@ -131,12 +131,6 @@ img {
     -webkit-transition-property: background-color;
     -o-transition-property: background-color;
     transition-property: background-color;
-    -webkit-transition-duration: 1s;
-         -o-transition-duration: 1s;
-            transition-duration: 1s;
-    -webkit-transition-timing-function: ease;
-         -o-transition-timing-function: ease;
-            transition-timing-function: ease;
 }
 
 .btn:hover {
@@ -195,19 +189,15 @@ img {
 .form {
     position: absolute;
     width: 1110px;
-    padding: 52px 0;
+    margin: 0 auto;
+    padding: 52px 64px;
     background-image: url("../img/form-bg.png");
     background-repeat: no-repeat;
     border-radius: 10px;
     bottom: -80px;
 }
 
-form {
-    text-align: center;
-}
-
 input {
-    margin-right: 24px;
     width: 769px;
     padding: 14px 32px;
     border: none;
@@ -223,13 +213,14 @@ input {
 .form-btn {
     width: 188px;
     border-radius: 10px;
-    padding: 17px 0;
+    padding: 19px 0;
     text-align: center;
     font-size: 20px;
     border: 0;
 }
 
 /* HERO SECTION ENDED */
+
 
 /* STATIC SECTION FINISHED */
 
@@ -279,26 +270,36 @@ input {
 }
 
 .static-item {
-    padding: 0 32px 41px;
+    position: relative;
+    padding: 77px 32px 41px;
     width: 350px;
     border-radius: 5px;
     background: #FFF;
 }
 
-.second {
-    position: relative;
+.static-item::before {
+    position: absolute;
+    top: -44px;
+    width: 88px;
+    height: 88px;
+    background-image: url("../img/img1.svg");
+    content: "";
+}
+
+.static-item:nth-child(2) {
     bottom: -44px;
 }
 
-.last {
-    position: relative;
+.static-item:nth-child(3) {
     bottom: -88px;
 }
 
-.item-img {
-    position: relative;
-    top: -44px;
-    margin-bottom: 33px;
+.static-item:nth-child(2)::before{
+    background-image: url("../img/img2.svg");
+}
+
+.static-item:nth-child(3)::before{
+    background-image: url("../img/img3.svg");
 }
 
 .item-title {
